--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,16 +53,17 @@
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "react-hook-form": "https://aistudiocdn.com/react-hook-form@^7.62.0",
-    "@hookform/resolvers/": "https://aistudiocdn.com/@hookform/resolvers@^5.2.1/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.1",
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.8.2",
+    "recharts": "https://aistudiocdn.com/recharts@^3.1.2",
     "react-dom": "https://aistudiocdn.com/react-dom@^19.1.1",
-    "recharts": "https://aistudiocdn.com/recharts@^3.2.0",
-    "vitest/": "https://aistudiocdn.com/vitest@^3.2.4/",
+    "vite": "https://aistudiocdn.com/vite@^7.1.4",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "vitest": "https://aistudiocdn.com/vitest@^3.2.4",
-    "zod": "https://aistudiocdn.com/zod@^4.1.8"
+    "vitest/": "https://aistudiocdn.com/vitest@^3.2.4/",
+    "zod": "https://aistudiocdn.com/zod@^4.1.8",
+    "@hookform/resolvers/": "https://aistudiocdn.com/@hookform/resolvers@^5.2.1/",
+    "react-hook-form": "https://aistudiocdn.com/react-hook-form@^7.62.0"
   }
 }
 </script>
