feat(students): Implement AI-powered search for student filtering
This commit introduces an AI-powered search bar on the Students page, replacing the previous basic text search. Users can now filter the student list using natural language queries like "show all unsponsored active girls".

Key changes include:
- **Gemini API Integration:** A new `queryAIAssistantForStudentFilters` service function communicates with the Gemini API to parse user queries.
- **Structured AI Response:** A strict JSON schema is provided to the AI model (`gemini-2.5-flash`) to ensure it returns valid filter objects (e.g., `{ "sponsorship_status": "Unsponsored", "student_status": "Active" }`).
- **Enhanced UI:**
    - The `StudentsPage` now features a new search input with a "Search" button that shows a loading state during the AI query.
    - A sparkle icon provides a visual cue for the AI functionality.
- **Dynamic Filtering:** The filters generated by the AI are applied to the student list, and the active criteria are displayed to the user for clarity.

This feature significantly improves the user experience by making data exploration more intuitive and powerful.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,6 +45,7 @@
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 2;
+        line-clamp: 2;
       }
     </style>
 <script type="importmap">
@@ -63,7 +64,10 @@
     "vitest/": "https://aistudiocdn.com/vitest@^3.2.4/",
     "zod": "https://aistudiocdn.com/zod@^4.1.8",
     "@hookform/resolvers/": "https://aistudiocdn.com/@hookform/resolvers@^5.2.1/",
-    "react-hook-form": "https://aistudiocdn.com/react-hook-form@^7.62.0"
+    "react-hook-form": "https://aistudiocdn.com/react-hook-form@^7.62.0",
+    "msw": "https://aistudiocdn.com/msw@^2.11.2",
+    "msw/": "https://aistudiocdn.com/msw@^2.11.2/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^0.14.0"
   }
 }
 </script>
