--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,8 @@
       <link rel="icon" type="image/png" href="/logo.png" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>NGO Sponsorship Dashboard</title>
+      <link rel="manifest" href="/manifest.json" />
+      <meta name="theme-color" content="#3C50E0" />
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -49,27 +51,29 @@
         }
       </style>
   <script type="importmap">
-  {
-    "imports": {
-      "react": "https://aistudiocdn.com/react@^19.1.1",
-      "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-      "react/": "https://aistudiocdn.com/react@^19.1.1/",
-      "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.8.2",
-      "recharts": "https://aistudiocdn.com/recharts@^3.1.2",
-      "react-dom": "https://aistudiocdn.com/react-dom@^19.1.1",
-      "vite": "https://aistudiocdn.com/vite@^7.1.4",
-      "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
-      "path": "https://aistudiocdn.com/path@^0.12.7",
-      "vitest": "https://aistudiocdn.com/vitest@^3.2.4",
-      "vitest/": "https://aistudiocdn.com/vitest@^3.2.4/",
-      "zod": "https://aistudiocdn.com/zod@^4.1.8",
-      "@hookform/resolvers/": "https://aistudiocdn.com/@hookform/resolvers@^5.2.1/",
-      "react-hook-form": "https://aistudiocdn.com/react-hook-form@^7.62.0",
-      "msw": "https://aistudiocdn.com/msw@^2.11.2",
-      "msw/": "https://aistudiocdn.com/msw@^2.11.2/"
-    }
+{
+  "imports": {
+    "@/": "./src/",
+    "react": "https://aistudiocdn.com/react@^19.1.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/",
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.8.2",
+    "recharts": "https://aistudiocdn.com/recharts@^3.1.2",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.1.1",
+    "vite": "https://aistudiocdn.com/vite@^7.1.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "vitest": "https://aistudiocdn.com/vitest@^3.2.4",
+    "vitest/": "https://aistudiocdn.com/vitest@^3.2.4/",
+    "zod": "https://aistudiocdn.com/zod@^4.1.8",
+    "@hookform/resolvers/": "https://aistudiocdn.com/@hookform/resolvers@^5.2.1/",
+    "react-hook-form": "https://aistudiocdn.com/react-hook-form@^7.62.0",
+    "msw": "https://aistudiocdn.com/msw@^2.11.2",
+    "msw/": "https://aistudiocdn.com/msw@^2.11.2/",
+    "react-transition-group": "https://aistudiocdn.com/react-transition-group@^4.4.5"
   }
-  </script>
+}
+</script>
   </head>
     <body class="bg-gray-2 dark:bg-box-dark-2 font-sans">
       <div id="root"></div>
