feat(offline): Implement true offline mode for Students module
Introduces a robust offline-first data strategy for the Students module, transforming the application into a reliable field tool that remains functional without a network connection.

This enhancement implements a "cache-first, then network" data fetching pattern and an "offline outbox" for mutations, laying the groundwork for app-wide offline capabilities.

Key Changes:
- **Offline Viewing:** Student data is now cached in IndexedDB. Pages load instantly from the cache, with fresh data fetched in the background when online.
- **Offline Deletion:** Users can now delete students while offline. The action is queued locally and automatically synced to the server upon reconnection.
- **Optimistic UI:** Deleting a student provides immediate visual feedback in the UI, which is reverted only if the background sync fails.
- **Sync Management:** A new `OfflineContext` tracks network status and manages a persistent queue of pending changes, ensuring data integrity.
- **UI Indicators:** The main header now displays clear status indicators for "Offline", "Syncing...", and "Pending Changes".

Technical Implementation:
- Added `idb` library for simplified IndexedDB interactions.
- Created `db.ts` utility for managing `api-cache` and `sync-queue` stores.
- Created `useOnlineStatus` hook for real-time network detection.
- Refactored `usePaginatedData` hook to be fully offline-aware.
- Updated `StudentsPage` to handle optimistic updates and listen for sync completion events.
- Wrapped `App.tsx` with `OfflineProvider` for global state management.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
       <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/idb@7/build/umd.js"></script>
       <style>
         /* Base styles to prevent flash of unstyled content */
         body {
